# fast_pl_py

./: Cargo.toml  README.md  flake.nix  pyproject.toml  requirements.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 50yickar04m51aqnc43gxf45g2i0n3k9-source  9sf3ga3pkicj0xr7bzwwg4jkxln80pa8-source
.github/workflows/: CI.yml
src/: lib.rs
