[package]
name = "rpls-py"
version = "1.3.0"
edition = "2021"
exclude = [".direnv/", "flake.nix", "flake.lock", ".envrc", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rpls_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
fast_pl = { git = "https://github.com/tph5595/fast_pl.git" }
